<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/app_bar_dashboard"
            tools:context=".DashboardActivity">


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/fees"
                  android:id="@+id/lblFee" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                  android:layout_marginTop="16dp"/>


        <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/skFee"
                 android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>


        <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:entries="@array/schoolboard" android:id="@+id/spnI" android:layout_marginTop="16dp">


        </Spinner>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/distance"
                  android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                  android:id="@+id/lblDistance" android:layout_marginTop="16dp"/>


        <SeekBar android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/skDistance" android:layout_marginTop="16dp"/>

        <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp" android:text="@string/day_care"
                  android:id="@+id/chkDayCare" android:layout_marginTop="16dp"/>


        <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp" android:text="@string/rtb"
                  android:id="@+id/chkRTB" android:layout_marginTop="16dp"/>

        <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:entries="@array/co" android:id="@+id/spnCoaided" android:layout_marginTop="16dp">
        </Spinner>


        <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp" android:text="@string/top_school_in_city"
                  android:id="@+id/chktop" android:layout_marginTop="16dp"/>

        <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp" android:text="@string/transport_facility"
                  android:id="@+id/chkFacitran" android:layout_marginTop="16dp"/>


        <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                 android:entries="@array/standarth" android:id="@+id/spnStandarth">
        </Spinner>


        <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp" android:text="@string/qualified_staff"
                  android:id="@+id/chkQuali" android:layout_marginTop="16dp"/>


        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/btnSearch"
                android:text="@string/search" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>


    </LinearLayout>

</ScrollView>


