<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tilName"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp" android:layout_marginRight="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_name"
                                                         android:id="@+id/txtName"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/tilEmail"
                                                   app:layout_constraintTop_toBottomOf="@id/tilName"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp" android:layout_marginRight="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_email"
                                                         android:inputType="textEmailAddress"
                                                         android:id="@+id/txtEmail"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/tilPassword"
                                                   app:layout_constraintTop_toBottomOf="@id/tilEmail"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp" android:layout_marginRight="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_password"
                                                         android:id="@+id/txtPassword"
                                                         android:inputType="textPassword"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/tilPhone"
                                                   app:layout_constraintTop_toBottomOf="@id/tilPassword"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp" android:layout_marginRight="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_number"
                                                         android:inputType="number"
                                                         android:maxEms="10"
                                                         android:id="@+id/txtPhone"/>


    </android.support.design.widget.TextInputLayout>


    <Button android:id="@+id/btnRegister" android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilPhone" android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"/>


    <Button android:id="@+id/btnCancel" android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilPhone" android:text="@string/cancel"
            app:layout_constraintStart_toEndOf="@+id/btnRegister" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>


</android.support.constraint.ConstraintLayout>