<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordActivity">


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:id="@+id/tilUsername"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_email"
                                                         android:id="@+id/txtUserName"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   app:layout_constraintTop_toBottomOf="@id/tilUsername"
                                                   android:id="@+id/tilCurrentPassword"
                                                   android:layout_height="wrap_content" android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:hint="@string/enter_current_password"
                                                         android:id="@+id/txtCurrentPassword"
                                                         android:inputType="textPassword"
                                                         android:layout_height="wrap_content"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   app:layout_constraintTop_toBottomOf="@id/tilCurrentPassword"
                                                   android:id="@+id/tilPassword"
                                                   android:layout_height="wrap_content" android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:hint="@string/enter_new_password"
                                                         android:id="@+id/txtPassword" android:inputType="textPassword"
                                                         android:layout_height="wrap_content"/>


    </android.support.design.widget.TextInputLayout>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnResetPassword"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" android:text="@string/reset_password"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>


</android.support.constraint.ConstraintLayout>