<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DashboardActivity">


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tilSearch"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   android:layout_marginTop="64dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp" android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/txtSearch"
                                                         android:hint="@string/enter_school_name_to_search"/>


    </android.support.design.widget.TextInputLayout>

    <Button android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilSearch" android:id="@+id/btnSearch"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnFilter" android:layout_marginTop="16dp"
            android:text="@string/search"
            android:visibility="gone"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>


    <Button android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilSearch" android:id="@+id/btnFilter"
            android:text="@string/filter"
            app:layout_constraintStart_toEndOf="@+id/btnSearch" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>

    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                            app:layout_constraintTop_toBottomOf="@id/btnSearch"
                                            android:layout_height="match_parent" android:id="@+id/lstSchools"
                                            android:layout_marginTop="180dp"
                                            app:layout_constraintStart_toStartOf="parent"
                                            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                                            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
                                            app:layout_constraintBottom_toBottomOf="parent">


    </android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>